write_data增加功能、整理程式

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 /Facial Transformation/dataset
 /Facial Transformation/run
 /Facial Transformation/test
+/Facial Transformation/test2
 /Facial Transformation/model
 *.pyc
