show bounding box from llm output

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,6 @@
 /Facial Transformation/test
 /Facial Transformation/model
 /Children's Fantasy World/dataset
+/Children's Fantasy World/testimgs
+/Children's Fantasy World/run
 *.pyc
