--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,5 @@
 /Children's Fantasy World/dataset
 /Children's Fantasy World/testimgs
 /Children's Fantasy World/run
+/Children's Fantasy World/response.txt
 *.pyc
