--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,5 @@
 /Children's Fantasy World/testimgs
 /Children's Fantasy World/run
 /Children's Fantasy World/response.txt
+/Children's Fantasy World/testvideos
 *.pyc
